--- a/index.html
+++ b/index.html
@@ -52,19 +52,20 @@
     <div class="container">
 
       <!-- Portfolio Item Heading -->
-      <h1 class="my-4">Bem vindo aos projetos do Hackespace Maringá!
+      <h1 class="my-4">Projetos DIY - Hackespace Maringá
       </h1>
 
       <!-- Portfolio Item Row -->
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+          <img class="img-fluid" src="https://i.ytimg.com/vi/0hVoRfbOZtU/maxresdefault.jpg" alt="">
         </div>
 
         <div class="col-md-4">
           <h3 class="my-3">Descrição</h3>
-          <p>KEVIN MONSTRAO</p>
+          <p>Diante da necessidade de divulgar os projetos desenvolvidos pelos
+             membros, tem-se criado esse site de publicação dos projetos</p>
           <h3 class="my-3">Project Details</h3>
           <ul>
             <li>Lorem Ipsum</li>
