--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-fluid" src="https://i.ytimg.com/vi/0hVoRfbOZtU/maxresdefault.jpg" alt="">
+          <img class="img-fluid" src="alele.jpg" alt="">
         </div>
 
         <div class="col-md-4">
