--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Hackerspace Maringá</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,19 +59,21 @@
       <div class="row">
 
         <div class="col-md-8">
+          <!-- <img class="img-fluid" src="alele.jpg" alt=""> -->
           <img class="img-fluid" src="alele.jpg" alt="">
         </div>
 
         <div class="col-md-4">
           <h3 class="my-3">Descrição</h3>
           <p>Diante da necessidade de divulgar os projetos desenvolvidos pelos
-             membros, tem-se criado esse site de publicação dos projetos</p>
-          <h3 class="my-3">Project Details</h3>
+             membros, tem-se criado esse site de publicação das atividades. Para
+             postar algo, siga as seguintes éticas: </p>
+          <h3 class="my-3">Éticas de um Hacker</h3>
           <ul>
-            <li>Lorem Ipsum</li>
-            <li>Dolor Sit Amet</li>
-            <li>Consectetur</li>
-            <li>Adipiscing Elit</li>
+            <li>Compartilhar</li>
+            <li>Práticas imperativas</li>
+            <li>Comunicar</li>
+            <li>Colaborar</li>
           </ul>
         </div>
 
