--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="col-md-8">
           <!-- <img class="img-fluid" src="alele.jpg" alt=""> -->
-          <img class="img-fluid" src="alele.jpg" alt="">
+          <img class="img-fluid" src="/ibagens/simboloHS.jpg" alt="">
         </div>
 
         <div class="col-md-4">
