--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="col-md-8">
           <!-- <img class="img-fluid" src="alele.jpg" alt=""> -->
-          <img class="img-fluid" src="/ibagens/simboloHS.jpg" alt="">
+          <img class="img-fluid" src="ibagens/LOGO.png" alt="">
         </div>
 
         <div class="col-md-4">
@@ -71,9 +71,10 @@
           <h3 class="my-3">Éticas de um Hacker</h3>
           <ul>
             <li>Compartilhar</li>
-            <li>Práticas imperativas</li>
+            <li>Praticar</li>
             <li>Comunicar</li>
             <li>Colaborar</li>
+            <li>Ser uma pessoa legal ;D</li>
           </ul>
         </div>
 
@@ -81,31 +82,31 @@
       <!-- /.row -->
 
       <!-- Related Projects Row -->
-      <h3 class="my-4">Related Projects</h3>
+      <h3 class="my-4">Projetos recentes</h3>
 
       <div class="row">
 
         <div class="col-md-3 col-sm-6 mb-4">
           <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="ibagens/braçoMecânico.jpg" alt="">
           </a>
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
           <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="ibagens/tvArduino.jpg" alt="">
           </a>
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
           <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="ibagens/alele.jpg" alt="">
           </a>
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
           <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="ibagens/HS2014.jpg" alt="">
           </a>
         </div>
 
