--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="col-md-3 col-sm-6 mb-4">
           <a href="#">
-            <img class="img-fluid" src="ibagens/HS2014.jpg" alt="">
+            <img class="img-fluid" src="ibagens/fpga_r.jpg" alt="">
           </a>
         </div>
 
