--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="row">
 
         <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
+          <a href="robot_arm.html">
             <img class="img-fluid" src="ibagens/braçoMecânico.jpg" alt="">
           </a>
         </div>
