--- a/robot_arm.html
+++ b/robot_arm.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Half Slider - Start Bootstrap Template</title>
+    <title>Controle automático de um braço mecânico via NODEMCU</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,19 +23,20 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+		<a href="index.html" </a>
+          <img src="ibagens/mini_logo.png" width="20" height="45" alt="">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="upload.html">Upload</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
@@ -57,24 +58,26 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item active" style="background-image: url('http://www.theoldrobots.com/images6/w104c.JPG')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>First Slide</h3>
-              <p>This is a description for the first slide.</p>
+              <h3>Braço mecânico</h3>
+              <p>Modelo utilizado: MR-999</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item" style="background-image: url('https://ae01.alicdn.com/kf/HTB1iq66KpXXXXccXXXXq6xXFXXXz.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Second Slide</h3>
-              <p>This is a description for the second slide.</p>
+<a href="https://pt.aliexpress.com/item/V3-Wireless-module-NodeMcu-4M-bytes-Lua-WIFI-Internet-of-Things-development-board-based-ESP8266-esp/32647542733.html?spm=a2g03.search0604.3.13.372865cep8fQgM&ws_ab_test=searchweb0_0,searchweb201602_3_10846_10152_10065_10151_10344_10068_10342_10547_10343_10340_10059_10341_10696_100031_10084_10083_10103_524_10618_10307_10624_10623_10622_10621_10620,searchweb201603_31,ppcSwitch_3&algo_expid=32a98d81-c971-45f5-8d4f-9f1e2cc0d12c-1&algo_pvid=32a98d81-c971-45f5-8d4f-9f1e2cc0d12c&priceBeautifyAB=0" </a>
+              <h3>NODEMCU</h3>
+              <p>Componente que permite controlar via wifi</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item" style="background-image: url('https://ae01.alicdn.com/kf/HTB1ZsOiilDH8KJjSspnq6zNAVXad.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Third Slide</h3>
-              <p>This is a description for the third slide.</p>
+<a href="https://pt.aliexpress.com/item/Free-shipping-Microcontroller-learning-kit-starter-and-proficient-24-interactive-lessons-for-arduino/2044891395.html?spm=a2g03.search0604.3.1.47ee667fXt2K7n&ws_ab_test=searchweb0_0,searchweb201602_3_10846_10152_10065_10151_10344_10068_10342_10547_10343_10340_10059_10341_10696_100031_10084_10083_10103_524_10618_10307_10624_10623_10622_10621_10620,searchweb201603_31,ppcSwitch_3&algo_expid=6adb254c-e874-4fb5-9dd9-23a9da9923bc-0&algo_pvid=6adb254c-e874-4fb5-9dd9-23a9da9923bc&priceBeautifyAB=0" </a>
+              <h3>Kit Arduino</h3>
+              <p>Para iniciantes, recomenda-se a compra de kits para desenvolvimento</p>
             </div>
           </div>
         </div>
@@ -92,10 +95,24 @@
     <!-- Page Content -->
     <section class="py-5">
       <div class="container">
-        <h1>Half Slider by Start Bootstrap</h1>
-        <p>The background images for the slider are set directly in the HTML using inline CSS. The rest of the styles for this template are contained within the
-          <code>half-slider.css</code>
-          file.</p>
+        <h1>Controlando um braço mecânico com NODEMCU</h1>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+
+		<h2>Materiais utilizados:</h2>
+		<ul>
+		<li>Braço mecânico</li>
+		<li>NODEMCU</li>
+		<li>Componentes elétricos extras</li>
+		</ul>
+
+		<h2>Instruções:</h2>
+		<ol>
+		<li>Compre os componentes do aliexpress</li>
+		<li>Abra-os</li>
+		<li>Fique feliz</li>
+		</ol>
+		
+
       </div>
     </section>
 
