--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,40 @@
       </div>
     </nav>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-1"></div>
+      <div class="col-xs-12 col-sm-10 jumbotron background-white">
+        <h1>Entre em contato com o grupo</h1>
+        <hr/>
+        <h3 id="email"> <span class="glyphicon glyphicon-envelope"></span> E-mail </h3>
+        <p>
+<span class="icon"><img src="ibagens/letter.png" />
+<a href="mailto:hackerspacemaringa@gmail.com">hackerspacemaringa@gmail.com</a>
+</p>
+        <hr>
+
+        <h3 id="social"> <span class="glyphicon glyphicon-comment"></span> Redes Sociais </h3>
+        <p class="social-media">
+          <a href="https://www.facebook.com/hackerspacemaringa/" target="_blank"> <span class="icon"><img src="ibagens/facebook.png" /></span>Página do Facebook</a>
+        </p>
+        <p class="social-media">
+          <a href="https://t.me/joinchat/Aw0WDkR6nqFskUNhwpTsjw" target="_blank"><span class="icon"><img src="ibagens/telegram.png" /></span>Participe do grupo no Telegram </a>
+        </p>
+        <hr>
+
+        <h3 id="localizacao"><span class="glyphicon glyphicon-map-marker"></span>Localização</h3>
+        <p>
+          Atualmente, o Hackerspace Maringá tem como sede o sala comercial de esquina na Rua Vitória, 943.
+        </p>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3661.6102409207874!2d-51.940599784468525!3d-23.402313284762126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ecd132abf8d2af%3A0x22c8091f9e002f5a!2sHackerspace+Maring%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1531389564275" width="880" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div class="col-sm-1"></div>
+    </div>
+
+	<!-- Map -->
+
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
