--- a/upload.html
+++ b/upload.html
@@ -44,10 +44,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="upload.html">Upload projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -56,6 +56,7 @@
         </div>
       </div>
     </nav>
+
 
     <!-- Page Content -->
     <div class="container">
@@ -66,11 +67,8 @@
     </div>
 
     <form>
-      <input name="title" type="text" placeholder="Title?" class="form-control" />
-      <textarea name="content" data-provide="markdown" rows="10"></textarea>
-      <label class="checkbox">
-        <input name="publish" type="checkbox">Publish
-      </label>
+      <input name="title" type="text" placeholder="Title" class="form-control" data-width="400"/>
+      <textarea name="content" data-provide="markdown" data-width="400" rows="10"></textarea>
       <hr/>
       <button type="submit" class="btn">Submit</button>
     </form>
