almost final version

--- a/upload.html
+++ b/upload.html
@@ -23,6 +23,8 @@
     <!-- Custom styles for this template -->
     <link href="css/portfolio-item.css" rel="stylesheet">
 
+	<!-- other markdown -->
+
 
   </head>
 
@@ -59,7 +61,8 @@
 
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container">  
+
       <h1 class="mt-5">Poste o seu projeto!</h1>
       <p>Nessa página você pode enviar os seus projetos desenvolvidos! Basta colocar um título, uma foto e uma descrição.
 		 O formulário abaixo aceita padrões markdown, como nos projetos do Jupyter, para facilitar a publicação do seu projeto.  
